--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,14 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  padding-top: 50px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+}
+
+.container {
+  width: 800px;
+  height: 800px;
 }
 
 h1 {
